Idea repository filters